--- a/RimWorldTranslationTool.csproj
+++ b/RimWorldTranslationTool.csproj
@@ -10,6 +10,11 @@
     <DefaultCulture>zh-TW</DefaultCulture>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)' == 'Release' Or '$(CI)' == 'true'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <NoWarn>CA1416</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
